debugging game loader

--- a/src/lib/title-style.css
+++ b/src/lib/title-style.css
@@ -1,6 +1,6 @@
 /*  ALL FOURS GAME Title Screen Stylesheet    */
     body {
-        background-image: url('../img/card_game.gif');
+        background-image: url('../img/hand_of_cards.jpg');
         color: white;
         font-family: "Microsoft YaHei UI Light",'Times New Roman', Times, serif;
     }
