--- a/src/lib/title-style.css
+++ b/src/lib/title-style.css
@@ -1,90 +1,27 @@
-/*  ALL FOURS GAME Title Screen Stylesheet    */
-    body {
+            /*  ALL FOURS GAME Title Screen Stylesheet    */
+        body {
         background-image: url('../img/hand_of_cards.jpg');
         color: white;
         font-family: "Microsoft YaHei UI Light",'Times New Roman', Times, serif;
     }
-    #lock {
-        font-size: 200%;
-        position: fixed;
-        top: 0;
-        right: 0;
-        margin-top: 5%;
-        margin-right: 5%;
+    .copyright  {
+        font-size: 7px;
+        color: #000;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: bold;
+        text-align:  left;
         padding: 0;
-        color: white;
-        text-decoration: none;
-    }
-    #lock:hover {
-        color: green;
-    }
-    #greeting {
-        border-bottom: 5px solid white;
-        font-size: 5vw;
-        font-weight: 600;
-        width: 40%;
-        padding-bottom: 20px;
-        padding-top: 20px;
-        padding-left: 5%;
-        padding-right: 5%;
-        margin-top: 5%;
-        margin-left: 25%;
-        margin-right: 25%; 
-        text-align: center;
-        background-color: rgba(74, 76, 78, 0.596);
-        border-radius: 50px;
-    }
-    /* make the clock large */
-    #clockbox {
         margin: 0;
-        font-family: monospace;
-        font-size: 12vw;
-        text-align: center;
-        width: 100%;
-        margin-top: 5%;
-        height: 100px;
     }
-    #socialmedia {
-        position: fixed;
-        bottom: 0;
-        left: 5px;
-        font-size: 35px;
-        color: white;
-    }
-    #socialmedia i {
-        color: white;
-    }
-    #datebox {
-        font-family: "Microsoft YaHei UI Light",'Times New Roman', Times, serif;
-        font-size: 35px;
-        font-weight: 600;
-        width: 75%;
-        text-align: right;
-        position: fixed;
-        bottom: 0;
-        right: 10px;
+    .copy   {
+        width: 60%;
+        padding: 0;
+        margin: 0;
+        float: left;
     }
     /* adjustments for mobile screens */
     @media screen and (max-width: 650px) {
-        #greeting {
-            margin-top: 35%;
-            margin-left: 15%;
-            margin-right: 15%;
-            width: 60%; 
-            font-size: 8vw;
-        }
-        #clockbox {margin-top: 10%; font-weight: 900;}
-        #socialmedia {
-            font-size: 12vw;
-            width: 100%;
-            text-align: center;
-            
-        }
-        #datebox {
-            font-size: 5vw;
-            top: 0;
-            left: 5px;
-        }
+
     }
 
     /* Full-width input fields */
@@ -219,6 +156,8 @@
     }
     .footnote-icons {
         float: right;
-        padding-right: 15px;
+        padding: 0px;
+        margin: 0;
+        width: 35%;
     }
 ;
