--- a/src/lib/title-style.css
+++ b/src/lib/title-style.css
@@ -9,8 +9,8 @@
         color: #000;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-weight: bold;
-        text-align:  left;
-        padding: 0;
+        text-align: justify;
+        padding-top: 100px;
         margin: 0;
     }
     .copy   {
