--- a/src/public/style.css
+++ b/src/public/style.css
@@ -34,11 +34,14 @@ nav {
    padding-left: 10px;
    padding-top: 5px;
    padding-bottom: 5px;
+}#game-container {
+    margin-right: 30%; 
+    width: 70%;
 }
 #game_board {
     border: 5px solid black; 
-    background-color: darkolivegreen;
-    margin-left: 15px;
+    /* background-color: darkolivegreen; */
+    /* margin-left: 15px; */
 }
 h3 {
     text-align: center;
@@ -53,10 +56,7 @@ h3 {
     /* padding-right: 20px; */
     width: 100%;
 }
-#game-container {
-    margin-right: 33%; 
-    width: 67%;
-}
+
 .function-buttons {
     margin-bottom: 5px;
 }
