--- a/src/public/lib/title-style.css
+++ b/src/public/lib/title-style.css
@@ -4,20 +4,32 @@
         color: white;
         font-family: "Microsoft YaHei UI Light",'Times New Roman', Times, serif;
     }
+    #loading {
+        font-size: 20px;
+        font-weight: bold;
+        text-align: left;
+        padding: 2px;
+    }
     .copyright  {
         font-size: 7px;
         color: #000;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-weight: bold;
-        text-align: justify;
-        padding-top: 100px;
-        margin: 0;
+        font-weight: bolder;
+        text-align: center;
+        margin: 0; 
+/*         position: absolute;
+        bottom: 80px; */
+    }
+    .footnote-icons {
+        width: 100%;
     }
     .copy   {
         width: 60%;
         padding: 0;
         margin: 0;
         float: left;
+/*         position: absolute;
+        bottom: 10px; */
     }
     /* adjustments for mobile screens */
     @media screen and (max-width: 650px) {
@@ -44,19 +56,24 @@
         cursor: pointer;
         width: 100%;
     }
+    .disabled {
+        opacity:    0.6;
+        cursor:     not-allowed;
+    }
 
     /* styling for login form */
     /* Extra styles for the cancel button */
     .cancelbtn {
         width: auto;
-        padding: 10px 18px;
+        position: relative;
         background-color: #f44336;
     }
 
     /* Center the image and position the close button */
     .imgcontainer {
         text-align: center;
-        margin: 24px 5px 12px 5px;
+        margin: 20px 5px 0px 5px;
+        padding-bottom: 0px;
         position: relative;
     }
 
@@ -95,10 +112,10 @@
     /* Modal Content/Box */
     .modal-content {
         background-color: #fefefe;
-        margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+        margin: 2% auto 2% auto; /* 5% from the top, 15% from the bottom and centered */
         border: 1px solid #888;
         width: 80%; /* Could be more or less, depending on screen size */
-        height: 80%;
+        height: 90%;
     }
     .modal-content p {
         text-align: center;
@@ -109,7 +126,7 @@
     .close {
         position: absolute;
         right: 25px;
-        top: 0;
+        top: 0px;
         color: #000;
         font-size: 35px;
         font-weight: bold;
@@ -160,4 +177,13 @@
         margin: 0;
         width: 35%;
     }
-;
+
+    #progress-bar {
+    width: 10%;
+    height: 30px;
+    background-color: rgb(144, 76, 175);
+    padding-right: 10px;
+    text-align: right; /* To center it horizontally (if you want) */
+    line-height: 30px; /* To center it vertically */
+    color: white; 
+    }
