--- a/src/public/lib/title-style.css
+++ b/src/public/lib/title-style.css
@@ -96,16 +96,18 @@
         display: none; /* Hidden by default */
         position: fixed; /* Stay in place */
         z-index: 1; /* Sit on top */
-        left: 400;
-        top: 0;
-        width: 400px; /* Full width */
+        left: 15%;
+        right: 15%;
+        top: 5%;
+        width: 660px; /* Full width */
         height: 600px; /* Full height */
         overflow: auto; /* Enable scroll if needed */
         background-color: rgb(0,0,0); /* Fallback color */
         background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-        padding-top: 20px;
+        padding-top: 30px;
         padding-bottom: 30px;
-        padding-left: 80px;
+        padding-left: 10px;
+        padding-right: 10px;
         color: black;
     }
 
@@ -114,8 +116,8 @@
         background-color: #fefefe;
         margin: 2% auto 2% auto; /* 5% from the top, 15% from the bottom and centered */
         border: 1px solid #888;
-        width: 80%; /* Could be more or less, depending on screen size */
-        height: 90%;
+        width: 330px; /* Could be more or less, depending on screen size */
+        height: 550px;
     }
     .modal-content p {
         text-align: center;
