--- a/src/public/lib/title-style.css
+++ b/src/public/lib/title-style.css
@@ -1,18 +1,17 @@
             /*  ALL FOURS GAME Title Screen Stylesheet    */
         body {
         background-image: url('../img/hand_of_cards.jpg');
-        color: white;
         font-family: "Microsoft YaHei UI Light",'Times New Roman', Times, serif;
     }
     #loading {
         font-size: 20px;
-        font-weight: bold;
+        font-weight: bolder;
         text-align: left;
         padding: 2px;
     }
     .copyright  {
         font-size: 7px;
-        color: #000;
+        color: rgb(255, 255, 255);
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-weight: bolder;
         text-align: center;
@@ -99,11 +98,11 @@
         left: 15%;
         right: 15%;
         top: 5%;
-        width: 660px; /* Full width */
+        width: 400px; /* Full width */
         height: 600px; /* Full height */
         overflow: auto; /* Enable scroll if needed */
         background-color: rgb(0,0,0); /* Fallback color */
-        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+        background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
         padding-top: 30px;
         padding-bottom: 30px;
         padding-left: 10px;
@@ -113,10 +112,10 @@
 
     /* Modal Content/Box */
     .modal-content {
-        background-color: #fefefe;
+        background-color: rgba(0,0,0,0);
         margin: 2% auto 2% auto; /* 5% from the top, 15% from the bottom and centered */
         border: 1px solid #888;
-        width: 330px; /* Could be more or less, depending on screen size */
+        width: 280px; /* Could be more or less, depending on screen size */
         height: 550px;
     }
     .modal-content p {
@@ -179,7 +178,11 @@
         margin: 0;
         width: 35%;
     }
-
+    #lower_card_div{
+        background-color: rgba(0, 0, 0, 0);
+        color: rgb(255, 255, 255);
+        font-weight: bolder;
+    }
     #progress-bar {
     width: 10%;
     height: 30px;
