--- a/src/public/lib/title-style.css
+++ b/src/public/lib/title-style.css
@@ -10,12 +10,12 @@
         padding: 2px;
     }
     .copyright  {
-        font-size: 7px;
+        font-size: 11px;
         color: rgb(255, 255, 255);
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-weight: bolder;
         text-align: center;
-        margin: 0; 
+        margin: 0, 0, 2px, 0; 
 /*         position: absolute;
         bottom: 80px; */
     }
@@ -23,7 +23,7 @@
         width: 100%;
     }
     .copy   {
-        width: 60%;
+        width: 100%;
         padding: 0;
         margin: 0;
         float: left;
@@ -36,28 +36,49 @@
     }
 
     /* Full-width input fields */
-    input[type=text], input[type=password] {
+/*     input[type=text], input[type=password] {
         width: 100%;
         padding: 12px 20px;
         margin: 8px 0;
         display: inline-block;
         border: 1px solid #ccc;
         box-sizing: border-box;
-    }
+    } */
 
     /* Set a style for all buttons */
     button {
+        font-size: 20px;
+        font-weight: normal;
         background-color: #4CAF50;
         color: white;
         padding: 14px 20px;
-        margin: 8px 0;
+        margin: 12px 0;
         border: none;
         cursor: pointer;
         width: 100%;
+        box-shadow: 10px 10px 8px 3px rgba(0, 0, 0, .7);
+    }
+    button:hover {
+        background-color: chartreuse;
+        /* font-size: 25px; */
+        font-weight: bolder;
+    }
+    .pressed {
+        font-size: 20px;
+        font-weight: bold;
+        background-color: #4CAF50;
+        color: white;
+        padding: 14px 20px;
+        margin: 12px 0;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+        box-shadow: inset 7px 7px 8px 3px rgba(0, 0, 0, .7);
     }
     .disabled {
-        opacity:    0.6;
+        opacity:    0.5;
         cursor:     not-allowed;
+        background-color: #888;
     }
 
     /* styling for login form */
@@ -70,6 +91,7 @@
 
     /* Center the image and position the close button */
     .imgcontainer {
+        color: white;
         text-align: center;
         margin: 20px 5px 0px 5px;
         padding-bottom: 0px;
@@ -82,23 +104,29 @@
     }
 
     .container {
-        padding: 16px;
+        padding: 5px;
     }
 
     span.psw {
         float: right;
         padding-top: 16px;
     }
+    #content {
+        position: absolute;
+        left: 175px;
+        width: 400px;
+        height: 600px;
+    }
 
     /* The Modal (background) */
     .modal {
-        display: none; /* Hidden by default */
-        position: fixed; /* Stay in place */
-        z-index: 1; /* Sit on top */
-        left: 15%;
-        right: 15%;
-        top: 5%;
-        width: 400px; /* Full width */
+        display: none;              /* Hidden by default */
+        position: fixed;            /* Stay in place */
+        z-index: 1;                 /* Sit on top */
+        /* left: 15px; */
+        /* right: 15%; */
+        top: 160px;
+        width: 750px; /* Full width */
         height: 600px; /* Full height */
         overflow: auto; /* Enable scroll if needed */
         background-color: rgb(0,0,0); /* Fallback color */
@@ -128,9 +156,9 @@
         position: absolute;
         right: 25px;
         top: 0px;
-        color: #000;
-        font-size: 35px;
-        font-weight: bold;
+        color: white;
+        font-size: 75px;
+        font-weight: bolder;
     }
     label {
         text-align: left;
@@ -169,7 +197,10 @@
         }
     }
     .fas {
-        font-size: 30px;
+        position: absolute;
+        bottom: 0px;
+        right: 25px;
+        font-size: 50px;
         padding: 5px;
     }
     .footnote-icons {
@@ -184,11 +215,11 @@
         font-weight: bolder;
     }
     #progress-bar {
-    width: 10%;
-    height: 30px;
-    background-color: rgb(144, 76, 175);
-    padding-right: 10px;
-    text-align: right; /* To center it horizontally (if you want) */
-    line-height: 30px; /* To center it vertically */
-    color: white; 
+        width: 1%;
+        height: 30px;
+        background-color: rgb(144, 76, 175);
+        padding-right: 10px;
+        text-align: right; /* To center it horizontally (if you want) */
+        line-height: 30px; /* To center it vertically */
+        color: white; 
     }
