--- a/src/public/lib/title-style.css
+++ b/src/public/lib/title-style.css
@@ -123,10 +123,11 @@
         float: right;
         padding-top: 10px;
     }
-    #content {
-        position: absolute;
-        left: 175px;
-        width: 300x;
+.content {
+        /* position: absolute; */
+        /* left: 175px; */
+        /* align-content: center; */
+        width: 300px;
         height: 440px;
     }
 
@@ -139,7 +140,7 @@
         /* right: 15%; */
         top: 170px;
         width: 750px; /* Full width */
-        height: 485px; /* Full height */
+        height: 495px; /* Full height */
         overflow: auto; /* Enable scroll if needed */
         background-color: rgb(0,0,0); /* Fallback color */
         background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
@@ -181,7 +182,19 @@
         color: red;
         cursor: pointer;
     }
-
+    /*  Add fade transparency Animation */
+    .fade_trans {
+        -webkit-animation: animatetrans 4.0s;
+        animation:  animatetrans 4.0s;
+    }
+    @-webkit-keyframes animatetrans {
+        from {-webkit-transform: background-color(rgba(0, 0, 0, 1.0))}
+        to {-webkit-transform: background-color(rgba(0, 0, 0, 0.8))}
+    }
+    @keyframes animatetrans {
+        from {transform: background-color(rgba(0, 0, 0, 1.0))}
+        to {transform: background-color(rgba(0, 0, 0, 0.8))}
+    }
     /* Add Zoom Animation */
     .animate {
         -webkit-animation: animatezoom 0.6s;
