--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -80,6 +80,7 @@ footer div p {
     margin-top: 40px;
     margin-bottom: 0px;
     width: 100%;
+    font-size: 8px;
 }
 #controlPanel {
     margin-right: 5px;
