--- a/css/chat.css
+++ b/css/chat.css
@@ -1,5 +1,5 @@
 /* style for the chat box   */
-.chat_section {
+#chat_box {
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
@@ -17,38 +17,66 @@
   right: 28px;
   width: 280px;
 }
-
+#chat-heading {
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  font-size: 35px;
+  font-weight: bold;
+  color: #555;
+}
 /* The popup chat - hidden by default */
 .chat-popup {
-  display: none;
+  display: block;
   position: fixed;
   bottom: 52px;
   right: 15px;
   border: 3px solid #f1f1f1;
   z-index: 9;
+  padding: 2px 15px 15px 15px;
 }
 
+#chat-window {
+  border: 2px solid #f1f1f1;
+  width: 100%;
+  background-color: #d4d4d4;
+  height: 200px;
+  font-size: 10px;
+}
+.messages {
+ overflow-y: scroll; 
+}
+.message.typing .messageBody {
+  color: #555;
+}
+.username {
+  overflow: hidden;
+  text-align: right;
+  padding-right: 10px;
+  font-weight: bold;
+}
+/* Input */
 /* Add styles to the form container */
 .form-container {
   max-width: 300px;
-  padding: 10px;
+  /* padding: 10px; */
   background-color: white;
 }
 
 /* Full-width textarea */
-.form-container textarea {
+.form-container .inputMessage {
   width: 100%;
-  padding: 15px;
+  /* padding: 15px; */
   margin: 5px 0 22px 0;
   border: none;
   background: #f1f1f1;
   resize: none;
-  min-height: 200px;
+  height: 65px;
 }
 
 /* When the textarea gets focus, do something */
-.form-container textarea:focus {
-  background-color: #ddd;
+.form-container inputMessage:focus {
+  background-color: #d4d4d4;
   outline: none;
 }
 
@@ -64,6 +92,7 @@
   opacity: 0.8;
 }
 
+
 /* Add a red background color to the cancel button */
 .form-container .cancel {
   background-color: red;
@@ -73,4 +102,6 @@
 .form-container .btn:hover, .open-button:hover {
   opacity: 1;
 }
-</style>
+
+/* 
+ */
