--- a/css/chat.css
+++ b/css/chat.css
@@ -40,11 +40,28 @@
   border: 2px solid #f1f1f1;
   width: 100%;
   background-color: #d4d4d4;
+  color: black;
   height: 200px;
   font-size: 10px;
 }
+.msg-handle {
+  overflow: hidden;
+  /* text-align: right; */
+  /* padding-right: 10px; */
+  font-weight: bold; 
+  font-size: 11px;
+  color: green; 
+}
+.chat-message {
+  text-align: left;
+  padding: 1px;
+  font-size: 10px;
+  list-style-type: none;
+}
 .messages {
  overflow-y: scroll; 
+ margin-left: 0; 
+ padding-left: 15px;
 }
 .message.typing .messageBody {
   color: #555;
@@ -66,7 +83,7 @@
 /* Full-width textarea */
 .form-container .inputMessage {
   width: 100%;
-  /* padding: 15px; */
+  padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
   background: #f1f1f1;
