--- a/css/chat.css
+++ b/css/chat.css
@@ -121,4 +121,9 @@
 }
 
 /* 
+    Project Code Name:    'Kaity'
+    Title:                'Ole Talk'
+    Version:               0.3.0
+    
+
  */
